deps/v8/test/message/regress/fail/regress-900383.out
*%(basename)s:6: SyntaxError: Identifier '*default*' has already been declared
export default x = 1;
       ^^^^^^^^^^^^^
SyntaxError: Identifier '*default*' has already been declared
